// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiHeaderLogo is rendered 1`] = `
<a
  aria-label="aria-label"
  class="euiHeaderLogo testClass1 testClass2"
  data-test-subj="test subject string"
>
  <svg
    class="euiIcon euiIcon--large euiIcon-isLoading euiHeaderLogo__icon"
    focusable="false"
    height="16"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</a>
`;

exports[`EuiHeaderLogo renders href 1`] = `
<a
  class="euiHeaderLogo"
  href="#"
>
  <svg
    class="euiIcon euiIcon--large euiIcon-isLoading euiHeaderLogo__icon"
    focusable="false"
    height="16"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</a>
`;

exports[`EuiHeaderLogo renders optional props 1`] = `
<a
  class="euiHeaderLogo"
  style="color:red"
>
  <svg
    class="euiIcon euiIcon--large euiIcon-isLoading euiHeaderLogo__icon"
    focusable="false"
    height="16"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</a>
`;
